--- a/itorrent.dcproj/projectInfo.plist
+++ b/itorrent.dcproj/projectInfo.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>AppIconImageSettings</key>
 	<string>image-theme: 1; image-shape: 3; image-opacity: 1.00; image-top-color: 0.828152895,0.874723434,0.978072762; image-bottom-color: 0.45343709,0.541603744,0.676615536; image-radius: 12,12,12,12; image-border: 0; image-border-color: 0.529399991,0.529399991,0.529399991; image-border-width: 1;</string>
+	<key>CYBackwardCompatibleExport</key>
+	<false/>
 	<key>CYProjectFormatVersion</key>
 	<integer>13</integer>
 	<key>CYShineVersion</key>
